Changes to index page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-    <title>
+    <title> GitHub Pages </title>
         <head>Test Page</head>
         <body>
             This is a test page for GitHub pages
         </body>
-    </title>
 </html>
